[B]Version v1.1.3[/B] - 1-Mar-2015
- Fixed DesiRulez

[B]Version v1.1.2[/B] - 23-Feb-2015
- Fixed DesiRulez

[B]Version v1.1.1[/B] - 23-Feb-2015
- Moved desi sites to DOM implementation
- Fixed desirulez scrapper
- Fixed the following resolvers
    - 180Upload
    - Letwatch
    - Movreel
- Broken Resolvers
    - HugeFiles
- removed billionuploads

[B]Version v1.1.0[/B] - 18-Feb-2015
- Fixed all english movie functions to use DOM

[B]Version v1.0.3[/B] - 17-Feb-2015
- Fixed Movie25
- Moved to DOM from standard search

[B]Version v1.0.2[/B]
- Fixed DesiRulez.net issue
- Incorporated Movie25.cm changes

[B]Version v1.0.1[/B]
- Fixed www.mediaplaybox.com links

[B]Version v1.0.0[/B]
- Released

[B]Version v0.0.10[/B]
- Fixed DesiRulez Source links

[B]Version v0.0.9[/B]
- Fixed constants file import errors

[B]Version v0.0.8[/B]
- Moved all modes to Constants File

[B]Version v0.0.7[/B]
- Updated all icons to reflect the updated theme
- Desi TV Shows performance improvements
- UI Enhancements
- Watch History Issue fixed
