@@ -1,5 +1,9 @@
+[B]Version v1.1.4[/B] - 1-Mar-2015
+- Fixed Movie25 
+
 [B]Version v1.1.3[/B] - 1-Mar-2015
 - Fixed DesiRulez
+- Fixed Movie25 
 
 [B]Version v1.1.2[/B] - 23-Feb-2015
 - Fixed DesiRulez
